# larridin_capstone

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: base.yaml
data/: README.md
docs/: 00_PROJECT_CHARTER.md  01_PHASED_CODING_PROMPTS.md  02_ARCHITECTURE.md  03_DATA_SOURCES.md  04_DATA_DICTIONARY.md  05_BACKTESTING_METHODOLOGY.md  06_DASHBOARD_SPEC.md  07_RESPONSIBLE_AI_AND_RISKS.md  08_LLM_SIGNAL_RUBRIC.md
infra/: db_schema.sql  deployment_notes.md
reports/: Weekly_Update.pptx  final_paper_outline.qmd  interim_findings.md  sample_company_report.md
scripts/: bootstrap_from_samples.py  build_analysis_crosssection.py  build_company_master.py  build_panel.py  build_universe_mapping.py  build_weekly_deck.py  classify_hiring_postings.py  collect_hiring_exa.py  export_larridin_snapshot.py  extract_filings_signals.py  flatten_larridin_scores.py  generate_company_report.py  ingest_financials.py  ingest_larridin.py  ingest_market_data.py  pull_controls.py  pull_prices_returns.py  pull_sec_fundamentals.py  regenerate_paper_numbers.py  run_baseline_analysis.py  run_controls_analysis.py  run_exclusion_analysis.py  run_llm_extraction_poc.py  run_robustness_checks.py  sample_job_postings.py  validate_job_classifier.py
tests/: test_agent_tools.py  test_backtest.py  test_company_report.py  test_company_report_agent.py  test_config.py  test_dashboard_data_loader.py  test_financials_ingestion.py  test_ic.py  test_identifiers.py  test_imports.py  test_job_postings.py  test_larridin_ingestion.py  test_sampling.py  (+8 more)
(+4805 files in other folders)
