[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_impact_research"
version = "0.1.0"
description = "Research pipeline for testing whether AI adoption signals predict corporate performance."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CMU AI Capstone Team" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tenacity>=8.2",
    "duckdb>=1.0",
    "streamlit>=1.36",
    "plotly>=5.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ai-impact = "ai_impact_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
